[package]
name = "crt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
cxx = "1.0.194"
env_logger = "0.11.10"
log = "0.4.32"
prettyplease = "0.2.37"
proc-macro2 = "1.0.95"
syn = { version = "2.0.117", features = ["full"] }

[build-dependencies]
cxx-build = "1.0.194"

[profile.release]
lto = true
codegen-units = 1