[package]
name = "crt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
cxx = "1"
env_logger = "0.11"
log = "0.4"
prettyplease = "0.2"
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }

[build-dependencies]
cxx-build = "1"