[package]
name = "crt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.4", features = ["derive"] }
cxx = "1.0.198"
env_logger = "0.11.11"
prettyplease = "0.3.0"
proc-macro2 = "1.0.107"
syn = { version = "3.0.3", features = ["full"] }

[build-dependencies]
cxx-build = "1.0.198"
